Edited wiki page through web user interface.

--- a/wiki/Vim.wiki
+++ b/wiki/Vim.wiki
@@ -43,6 +43,28 @@ From normal mode:
 :e file.txt
 }}}
 
+= Repetitions =
+
+== Repeat last edition ==
+In normal mode, press `.` (dot).
+
+Example:
+  * You have this text:
+{{{
+double one = 1.;
+double two = 2.;
+double thr = 3.;
+}}}
+  * In normal mode (go with `ESC`) press:
+{{{
+gg/ =<ENTER>dt;
+}}}
+  * With that you have deleted "` = 1.`" from the first line.
+  * Now, you want to repeat the same action of deleting in the two other lines. Press:
+{{{
+n.n.
+}}} 
+
 = Useful plugins =
 
 == C++ completion ==
