--- a/wiki/Vim.wiki
+++ b/wiki/Vim.wiki
@@ -59,7 +59,10 @@ double thr=3333.;
 {{{
 gg/=<ENTER>dt;
 }}}
-  * With that you have deleted "`=1111.`" from the first line.
+  * With that you have deleted "`=1111.`" from the first line. In detail:
+    * "`gg`" go to the beginning of the file.
+    * "`/=<ENTER>`" search the char "`=`".
+    * "`dt;`" delete from here to the char "`;`".
   * Now, you want to repeat the same action of deleting in the two other lines. Press:
 {{{
 n.n.
