Improve Latex template.

--- a/templates/latex/paper.tex
+++ b/templates/latex/paper.tex
@@ -1,7 +1,11 @@
 \documentclass[a4paper,10pt]{article}
 \usepackage[utf8x]{inputenc}
+%\usepackage{graphicx}
+%\usepackage{subfig}
 
-\newtheorem{Definition}{Definición}
+%\newtheorem{Definition}{Definition}
+
+%\newcommand{\degree}{\ensuremath{^\circ}}
 
 \title{}
 \author{}
