Edited wiki page through web user interface.

--- a/wiki/Vim.wiki
+++ b/wiki/Vim.wiki
@@ -109,7 +109,7 @@ Use `%` as the filename. For example, to count how many words are in the file yo
 
 == Sort ==
 {{{
-:%!sort
+:sort
 }}}
 
 = Useful plugins =
