Edited wiki page through web user interface.

--- a/wiki/LaTeX.wiki
+++ b/wiki/LaTeX.wiki
@@ -20,3 +20,4 @@
 
 = References =
   * [http://docs.online.bg/PROGRAMMING/tex/the-texbook.ps The TexBook]
+  * [http://en.wikipedia.org/wiki/Math_markup Math Markup]
