--- a/trunk/templates/latex/paper.tex
+++ b/trunk/templates/latex/paper.tex
@@ -2,6 +2,7 @@
 \usepackage[utf8x]{inputenc}
 %\usepackage{graphicx}
 %\usepackage{subfig}
+%\usepackage{verbatim}
 
 %\newtheorem{Definition}{Definition}
 
