Edited wiki page FFmpeg through web user interface.

--- a/wiki/FFmpeg.wiki
+++ b/wiki/FFmpeg.wiki
@@ -9,7 +9,7 @@ ffmpeg -i video_input.mp4 frame_%04d.png
 
 == Extract audio from video ==
 {{{
-ffmpeg -i video_input.mp4 -ab 128 -ar 44100 audio_output.mp3
+ffmpeg -i video_input.mp4 -ab 128 -ar 44100 audio_output.ogg
 }}}
 
 = Compile =
