--- a/wiki/LaTeX.wiki
+++ b/wiki/LaTeX.wiki
@@ -66,3 +66,4 @@ comment.
 = References =
   * [http://docs.online.bg/PROGRAMMING/tex/the-texbook.ps The TexBook]
   * [http://en.wikipedia.org/wiki/Math_markup Math Markup]
+  * [http://www.artofproblemsolving.com/Wiki/index.php/LaTeX:Symbols LaTeX:Symbols]
