Edited wiki page Console through web user interface.

--- a/wiki/Console.wiki
+++ b/wiki/Console.wiki
@@ -47,6 +47,13 @@ fuser -muv [file]
 du . | sort -n
 }}}
 
+= System =
+
+== Ubuntu version ==
+{{{
+lsb_release -a
+}}}
+
 = Scripting =
 
 == Loops ==
