Edited wiki page Console through web user interface.

--- a/wiki/Console.wiki
+++ b/wiki/Console.wiki
@@ -53,11 +53,9 @@ ls -1
 }}}
 
 = System =
-
-== Ubuntu version ==
-{{{
-lsb_release -a
-}}}
+|| Linux version || lsb_release -a ||
+|| CPU || cat /proc/cpuinfo ||
+|| Memory || cat /proc/meminfo ||
 
 = Scripting =
 
