Edited wiki page Math through web user interface.

--- a/wiki/Math.wiki
+++ b/wiki/Math.wiki
@@ -78,3 +78,10 @@ Run script:
 {{{
 $ python plot.py
 }}}
+
+== References ==
+
+  * [http://matplotlib.sourceforge.net/ matplotlib]
+  * [http://www.rexx.com/~dkuhlman/scipy_course_01.html SciPy Course]
+  * [http://mathesaurus.sourceforge.net/ Mathesaurus]
+  * [http://spyderlib.googlecode.com Spyder] (Scientific PYthon Development EnviRonment)
