--- a/wiki/Math.wiki
+++ b/wiki/Math.wiki
@@ -2,6 +2,15 @@
 
 = !PyLab =
 
+== Sorting ==
+
+{{{
+a = csv2rec("results.csv", delimiter=" ")
+
+I = argsort(a, order=("column2", "column1")) # Indexes
+b = a[I,:]                                   # Ordered array
+}}}
+
 == Plotting CSV ==
 
 === In interactive mode ==
@@ -84,4 +93,5 @@ $ python plot.py
   * [http://matplotlib.sourceforge.net/ matplotlib]
   * [http://www.rexx.com/~dkuhlman/scipy_course_01.html SciPy Course]
   * [http://mathesaurus.sourceforge.net/ Mathesaurus]
+  * [http://www.scipy.org/NumPy_for_Matlab_Users NumPy for Matlab Users]
   * [http://spyderlib.googlecode.com Spyder] (Scientific PYthon Development !EnviRonment)
