--- a/templates/latex/book.tex
+++ b/templates/latex/book.tex
@@ -1,5 +1,7 @@
 \documentclass[a4paper,10pt]{book}
 \usepackage[utf8x]{inputenc}
+%\usepackage[activeacute,spanish]{babel}
+\usepackage{hyperref}
 
 \title{}
 \author{}
@@ -15,5 +17,9 @@
 \chapter{}
 
 \backmatter
+
+\begin{thebibliography}{99}
+\bibitem{alias} Description.
+\end{thebibliography}
 
 \end{document}
