--- a/trunk/templates/latex/book.tex
+++ b/trunk/templates/latex/book.tex
@@ -16,10 +16,14 @@
 
 \chapter{}
 
+\appendix
+
+\chapter{}
+
 \backmatter
 
 \begin{thebibliography}{99}
-\bibitem{alias} Description.
+\bibitem{alias} Author: \emph{}. Editorial, year.
 \end{thebibliography}
 
 \end{document}
