--- a/templates/latex/paper.tex
+++ b/templates/latex/paper.tex
@@ -4,7 +4,7 @@
 %\usepackage{subfig}
 %\usepackage{verbatim}
 
-%\newtheorem{Definition}{Definition}
+%\newtheorem{definition}{Definition}
 
 %\newcommand{\degree}{\ensuremath{^\circ}}
 
