Edited wiki page Vim through web user interface.

--- a/wiki/Vim.wiki
+++ b/wiki/Vim.wiki
@@ -56,6 +56,16 @@ From normal mode:
 :r [FILENAME]
 }}}
 
+== Convert Unix file to Windows ==
+{{{
+:set ff=dos
+}}}
+
+== Convert Windows file to Unix ==
+{{{
+:set ff=unix
+}}}
+
 = Characters =
 
 == Insert character by its number value ==
