--- a/wiki/Console.wiki
+++ b/wiki/Console.wiki
@@ -152,7 +152,7 @@ chroot debootstrap
 
 Setting up installation:
 {{{
-echo "deb http://ftp.fr.debian.org/debian stable main contrib non-free" > /etc/apt/sources.list
+echo "deb http://ftp.fr.debian.org/debian lenny main contrib non-free" > /etc/apt/sources.list
 apt-get update && apt-get dist-upgrade
 #mount -t proc /proc proc
 # <file system> <mount point>   <type>  <options>       <dump>  <pass>
