--- a/wiki/Console.wiki
+++ b/wiki/Console.wiki
@@ -155,16 +155,16 @@ Setting up installation:
 {{{
 echo "deb http://ftp.fr.debian.org/debian lenny main contrib non-free" > /etc/apt/sources.list
 apt-get update && apt-get dist-upgrade
-#mount -t proc /proc proc
-# <file system> <mount point>   <type>  <options>       <dump>  <pass>
-echo "proc            /proc           proc    nodev,noexec,nosuid 0       0" >> /etc/fstab
-mount -a
+#mount -t proc proc /proc && sudo mount -t sysfs sysfs /sys
+#echo "proc /proc proc rw 0 0" >> /etc/fstab
+#echo "sysfs /sys sysfs rw 0 0" >> /etc/fstab
+#mount -a
 }}}
 
 Exit:
 {{{
-umount -a
-#umount /proc
+#umount -a
+#umount /proc && umount /sys
 exit
 sudo umount debootstrap
 }}}
