Edited wiki page Console through web user interface.

--- a/wiki/Console.wiki
+++ b/wiki/Console.wiki
@@ -142,7 +142,7 @@ dd if=/dev/zero of=debian_stable.raw bs=1M count=10000
 sudo mkfs.ext4 debian_stable.raw
 sudo mkdir debootstrap
 sudo mount -t auto -o loop debian_stable.raw debootstrap
-sudo debootstrap stable /mnt http://ftp.fr.debian.org/debian
+sudo debootstrap lenny debootstrap http://ftp.fr.debian.org/debian
 }}}
 
 Mounting bootstrap:
