--- a/wiki/Vim.wiki
+++ b/wiki/Vim.wiki
@@ -169,3 +169,6 @@ gggqG
 
 == C++ completion ==
   * [http://www.vim.org/scripts/script.php?script_id=1520 OmniCppComplete] (see [http://vim.wikia.com/wiki/VimTip1608 C++ code completion] for configuration instructions).
+
+= Links =
+  * [http://www.rayninfo.co.uk/vimtips.html Best of Vim Tips]
