Edited wiki page Console through web user interface.

--- a/wiki/Console.wiki
+++ b/wiki/Console.wiki
@@ -182,3 +182,6 @@ Exit:
 exit
 sudo umount bootstrap
 }}}
+
+References:
+  * [http://linux.koolsolutions.com/2009/06/05/howto-running-32-bit-x-windows-application-in-a-bootstrap-system-using-bind-mount/ Running 32-bit X Windows application on 64-bit system using bind mount in Linux]
