--- a/wiki/Console.wiki
+++ b/wiki/Console.wiki
@@ -171,7 +171,7 @@ apt-get update && apt-get dist-upgrade
 X's:
 {{{
 # From host:
-sudo mount --bind /tmp debootstrap/tmp/
+sudo mount --bind /tmp bootstrap/tmp/
 xhost +
 }}}
 
